--- a/components/org.wso2.carbon.identity.oauth.ui/src/main/resources/org/wso2/carbon/identity/oauth/ui/i18n/Resources.properties
+++ b/components/org.wso2.carbon.identity.oauth.ui/src/main/resources/org/wso2/carbon/identity/oauth/ui/i18n/Resources.properties
@@ -32,6 +32,10 @@ loginPage=Login Page
 errorPage=Error Page
 consentPage=Consent Page
 grantTypes=Allowed Grant Types
+pkce.mandatory=PKCE Mandatory
+pkce.support.plain=Support PKCE 'Plain' Transform Algorithm
+pkce.mandatory.hint=Only allow applications that bear PKCE Code Challenge with them.
+pkce.support.plain.hint=Server supports 'S256' PKCE tranformation algorithm by default.
 new.app=New Application
 app.added.successfully=Application registered successfully
 error.while.adding.app=Error occurred while adding the application
