IDENTITY-6127: Add a UI to the expiry time per SP feature

--- a/components/org.wso2.carbon.identity.oauth.ui/src/main/resources/org/wso2/carbon/identity/oauth/ui/i18n/Resources.properties
+++ b/components/org.wso2.carbon.identity.oauth.ui/src/main/resources/org/wso2/carbon/identity/oauth/ui/i18n/Resources.properties
@@ -84,6 +84,9 @@ error.while.revoking.authorization=Error while revoking authorization for {0}
 revocation.success=Authorization successfully revoked for {0}
 next=Next
 prev=prev
+user.access.token.expiry.time=User Access Token Expiry Time in Milliseconds
+application.access.token.expiry.time=Application Access Token Expiry Time in Milliseconds
+refresh.token.expiry.time=Refresh Token Expiry Time in Milliseconds
 
 
 
