Resolved PR comments

--- a/components/org.wso2.carbon.identity.oauth.ui/src/main/resources/org/wso2/carbon/identity/oauth/ui/i18n/Resources.properties
+++ b/components/org.wso2.carbon.identity.oauth.ui/src/main/resources/org/wso2/carbon/identity/oauth/ui/i18n/Resources.properties
@@ -84,9 +84,13 @@ error.while.revoking.authorization=Error while revoking authorization for {0}
 revocation.success=Authorization successfully revoked for {0}
 next=Next
 prev=prev
-user.access.token.expiry.time=User Access Token Expiry Time in Milliseconds
-application.access.token.expiry.time=Application Access Token Expiry Time in Milliseconds
-refresh.token.expiry.time=Refresh Token Expiry Time in Milliseconds
+user.access.token.expiry.time=User Access Token Expiry Time
+application.access.token.expiry.time=Application Access Token Expiry Time
+refresh.token.expiry.time=Refresh Token Expiry Time
+invalid.user.access.token.expiry.time=Invalid value for User Access Token Expiry Time
+invalid.application.access.token.expiry.time=Invalid value for Application Access Token Expiry Time
+invalid.refresh.token.expiry.time=Invalid value for Refresh Token Expiry Time
+seconds=seconds
 
 
 
